Added -Werror and -Wall, resolved issues.
Needed to remove some "inline" definitions for functions.
Cleaned up some code that's not needed in simulation.
Fixed a buffer overrun issue in simulation.

Change-Id: Ibdf8007a1d801f1270b9e60ce7407e426a45eece
Signed-off-by: Dan Cripe <dan.cripe@hp.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ cmake_minimum_required (VERSION 2.8)
 set (SYSD sysd)
 project (${SYSD})
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -Wall -Werror")
+
 OPTION( PLATFORM_SIMULATION "Enable platform simulation" OFF )
 
 set (SYSCONFDIR "/etc" CACHE STRING "Location of system configuration files")
