Subject: Story 2116: Updates for MAC assignment - changes to sysd
Changes to sysd to assign open_vswitch:system_mac and to stop assigning unique
MACs to interfaces.

Depends-On:I736d3121e6f68c06a2b4b2ba9fe48c51bcf9435f

Change-Id: Ia97fad02afb97bff99fa8fc6448b1b6dfcf7e508
Signed-off-by: garye <gary.evans@hp.com>

--- a/sysd.h.in
+++ b/sysd.h.in
@@ -160,6 +160,8 @@ typedef struct subsystem {
 
     uint64_t                nxt_mac_addr;       /*!< Next avaliable MAC addr */
     int                     num_free_macs;
+    uint64_t                mgmt_mac_addr;      /*!< MAC addr for mgmt i/f */
+    uint64_t                system_mac_addr;    /*!< MAC addr for system, as a uint64 */
 } sysd_subsystem_t;
 
 extern struct ovsdb_idl  *idl;
