Fix missing change
Change-Id: If007cd05570197d859d24a54b063ff4e06cd073e
Signed-off-by: Diego Dompe <dompe@hp.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,4 +81,4 @@ install(TARGETS ${SYSD}
 # HALON_TODO: The image.manifest file should not be located in sysd.
 # This is just temporary parking space until we find it better home.
 install(FILES image.manifest
-        DESTINATION etc/halon)
+        DESTINATION etc/openswitch)
