Sysd component tests & repo migration.
Change-Id: I497e95be3b3f29a3f2cd5de83170da38467b6466
Signed-off-by: Sreedhar <sreedharr@hp.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ cmake_minimum_required (VERSION 2.8)
 set (SYSD sysd)
 project (${SYSD})
 
+set (SRC_DIR src)
+set (INCL_DIR include)
+
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -Wall -Werror")
 
 OPTION( PLATFORM_SIMULATION "Enable platform simulation" OFF )
@@ -30,47 +33,51 @@ set (HWDESC_FILE_LINK ${SYSCONFDIR}/openswitch/hwdesc)
 set (HWDESC_FILES_PATH ${SYSCONFDIR}/openswitch/platform)
 
 # Update the sysd.h with any compile time flags
-configure_file (${PROJECT_SOURCE_DIR}/sysd.h.in
-                ${PROJECT_BINARY_DIR}/sysd.h)
+configure_file (${PROJECT_SOURCE_DIR}/${INCL_DIR}/sysd.h.in
+                ${PROJECT_BINARY_DIR}/${INCL_DIR}/sysd.h)
 
 # Update the platform YAML config file location in sysd_cfg_yaml
-configure_file (${PROJECT_SOURCE_DIR}/sysd_cfg_yaml.h.in
-                ${PROJECT_BINARY_DIR}/sysd_cfg_yaml.h)
+configure_file (${PROJECT_SOURCE_DIR}/${INCL_DIR}/sysd_cfg_yaml.h.in
+                ${PROJECT_BINARY_DIR}/${INCL_DIR}/sysd_cfg_yaml.h)
 
 set (MANIFEST_FILE_PATH /etc/openswitch/image.manifest)
 
 # Update the image.manifest file location in sysd_util
-configure_file (${PROJECT_SOURCE_DIR}/sysd_util.h.in
-                ${PROJECT_BINARY_DIR}/sysd_util.h)
+configure_file (${PROJECT_SOURCE_DIR}/${INCL_DIR}/sysd_util.h.in
+                ${PROJECT_BINARY_DIR}/${INCL_DIR}/sysd_util.h)
 
 # Rules to locate needed libraries
 include(FindPkgConfig)
 pkg_check_modules(ZLIB REQUIRED zlib)
 pkg_check_modules(CONFIG_YAML REQUIRED ops-config-yaml)
-pkg_check_modules(HALONUTILS REQUIRED opsutils)
+pkg_check_modules(OPSUTILS REQUIRED opsutils)
 pkg_check_modules(OVSCOMMON REQUIRED libovscommon)
 pkg_check_modules(OVSDB REQUIRED libovsdb)
 
-include_directories (${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR}
+include_directories (${PROJECT_BINARY_DIR}/${INCL_DIR}
+                     ${PROJECT_SOURCE_DIR}/${INCL_DIR}
                      ${OVSCOMMON_INCLUDE_DIRS})
 
 # Source files to build sysd
 if (PLATFORM_SIMULATION)
-set (SOURCES sysd.c sysd_cfg_yaml.c sysd_fru.c sysd_ovsdb_if.c sysd_util.c
-             sysd_stub_x86_fru.c)
+        set (SOURCES ${SRC_DIR}/sysd.c ${SRC_DIR}/sysd_cfg_yaml.c
+                     ${SRC_DIR}/sysd_fru.c ${SRC_DIR}/sysd_ovsdb_if.c
+                     ${SRC_DIR}/sysd_util.c ${SRC_DIR}/sysd_stub_x86_fru.c)
 else ()
-set (SOURCES sysd.c sysd_cfg_yaml.c sysd_fru.c sysd_ovsdb_if.c sysd_util.c)
+        set (SOURCES ${SRC_DIR}/sysd.c ${SRC_DIR}/sysd_cfg_yaml.c
+                     ${SRC_DIR}/sysd_fru.c ${SRC_DIR}/sysd_ovsdb_if.c
+                     ${SRC_DIR}/sysd_util.c)
 endif ()
 
 # Rules to build sysd
 add_executable (${SYSD} ${SOURCES})
 
-target_link_libraries (${SYSD} ${HALONUTILS_LIBRARIES} ${CONFIG_YAML_LIBRARIES}
+target_link_libraries (${SYSD} ${OPSUTILS_LIBRARIES} ${CONFIG_YAML_LIBRARIES}
                        ${OVSCOMMON_LIBRARIES} ${OVSDB_LIBRARIES} ${ZLIB_LIBRARIES}
                        -lpthread -lrt)
 
 # The default install prefix is /usr. We want to install manifest file at
-# '/etc/halon'. So change the install prefix to '/', and use relative
+# '/etc/openswitch'. So change the install prefix to '/', and use relative
 # directories in the install command.
 SET(CMAKE_INSTALL_PREFIX "/" CACHE STRING "Prefix prepended to install directories" FORCE)
 
@@ -78,7 +85,7 @@ SET(CMAKE_INSTALL_PREFIX "/" CACHE STRING "Prefix prepended to install directori
 install(TARGETS ${SYSD}
         RUNTIME DESTINATION usr/bin)
 
-# HALON_TODO: The image.manifest file should not be located in sysd.
+# OPS_TODO: The image.manifest file should not be located in sysd.
 # This is just temporary parking space until we find it better home.
-install(FILES image.manifest
+install(FILES files/image.manifest
         DESTINATION etc/openswitch)
