Adjusting to renaming of Open_vSwitch in the schema
Change-Id: I8fa04c199c934a312f88f0be35171ec480b55f4f
Signed-off-by: Michael Zayats <michael.zayats@hp.com>

--- a/include/sysd.h.in
+++ b/include/sysd.h.in
@@ -91,9 +91,9 @@
  *
  *  The following columns are WRITTEN by sysd:
  *
- *      Open_vSwitch:subsystems
- *      Open_vSwitch:cur_hw
- *      Open_vSwitch:next_hw
+ *      System:subsystems
+ *      System:cur_hw
+ *      System:next_hw
  *
  *      Subsystem:name, asset_tag_number, hw_desc_dir, other_config, interfaces
  *
