--- a/include/sysd_util.h.in
+++ b/include/sysd_util.h.in
@@ -1,18 +1,12 @@
 /************************************************************************//**
- * @ingroup ops-sysd
+ * (c) Copyright 2015 Hewlett Packard Enterprise Development LP
  *
- * @file
- * Header for ops-sysd utility functions.
- *
- * Copyright (C) 2015 Hewlett-Packard Development Company, L.P.
- * All Rights Reserved.
-
  *    Licensed under the Apache License, Version 2.0 (the "License"); you may
  *    not use this file except in compliance with the License. You may obtain
  *    a copy of the License at
-
+ *
  *         http://www.apache.org/licenses/LICENSE-2.0
-
+ *
  *    Unless required by applicable law or agreed to in writing, software
  *    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  *    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
@@ -20,6 +14,11 @@
  *    under the License.
  *
  ***************************************************************************/
+/* @ingroup ops-sysd
+ *
+ * @file
+ * Header for ops-sysd utility functions.
+ */
 
 #ifndef __SYSD_UTIL_H__
 #define __SYSD_UTIL_H__
