Add os-release BUILD_ID information into the swith_version of OVSDB
Change-Id: I4f5471ab667e0d6ed8277dc68f9cad4acd13a315
Signed-off-by: Pedro Alpizar <pealpizar@hp.com>

--- a/include/sysd_util.h.in
+++ b/include/sysd_util.h.in
@@ -34,6 +34,9 @@
 #define MGMT_INTF_NAME_TAG "intf"
 
 #define IMAGE_MANIFEST_FILE_PATH "@MANIFEST_FILE_PATH@"
+#define OS_RELEASE_FILE_PATH "@OS_RELEASE_FILE_PATH@"
+#define OS_RELEASE_BUILD_NAME "BUILD_ID"
+#define OS_RELEASE_VERSION_NAME "VERSION_ID"
 
 #define SYSD_MALLOC(buf, len)      buf = xmalloc(len)
 
