chg: dev: Add QoS system initialization
In order to initialize the QoS feature, code has been added to
sysd to populate factory defaults into ovsdb.

Change-Id: I7e0f1c2b4b0fdb3b85b6a61e8b1aa7973de7a958
Depends-on: I4b5a8a7a94bf9daef758bbb2f8222910b115e1bb
Depends-on: Iaaf30e4b574985b6b499fde1239478f4b19bc559
Depends-on: Ia1528f69c9ae679cac522b1a397f414289c4ed88
Signed-off-by: Miles Cote <miles.cote@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,15 +60,12 @@ include_directories (${PROJECT_BINARY_DIR}/${INCL_DIR}
                      ${OVSCOMMON_INCLUDE_DIRS})
 
 # Source files to build ops-sysd
-if (PLATFORM_SIMULATION)
-        set (SOURCES ${SRC_DIR}/sysd.c ${SRC_DIR}/sysd_cfg_yaml.c
-                     ${SRC_DIR}/sysd_fru.c ${SRC_DIR}/sysd_ovsdb_if.c
-                     ${SRC_DIR}/sysd_util.c)
-else ()
-        set (SOURCES ${SRC_DIR}/sysd.c ${SRC_DIR}/sysd_cfg_yaml.c
-                     ${SRC_DIR}/sysd_fru.c ${SRC_DIR}/sysd_ovsdb_if.c
-                     ${SRC_DIR}/sysd_util.c)
-endif ()
+set (SOURCES ${SRC_DIR}/sysd.c
+             ${SRC_DIR}/sysd_cfg_yaml.c
+             ${SRC_DIR}/sysd_fru.c
+             ${SRC_DIR}/sysd_ovsdb_if.c
+             ${SRC_DIR}/qos_init.c
+             ${SRC_DIR}/sysd_util.c)
 
 # Rules to build ops-sysd
 add_executable (${SYSD} ${SOURCES})
