--- a/tests/test_hw_desc_files/manifest.yaml
+++ b/tests/test_hw_desc_files/manifest.yaml
@@ -39,3 +39,5 @@ files:
         filename:   devices.yaml
     -   name:       ports
         filename:   ports.yaml
+    -   name:       fru
+        filename:   fru.yaml
