--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ include_directories (${PROJECT_BINARY_DIR}/${INCL_DIR}
 if (PLATFORM_SIMULATION)
         set (SOURCES ${SRC_DIR}/sysd.c ${SRC_DIR}/sysd_cfg_yaml.c
                      ${SRC_DIR}/sysd_fru.c ${SRC_DIR}/sysd_ovsdb_if.c
-                     ${SRC_DIR}/sysd_util.c ${SRC_DIR}/sysd_stub_x86_fru.c)
+                     ${SRC_DIR}/sysd_util.c)
 else ()
         set (SOURCES ${SRC_DIR}/sysd.c ${SRC_DIR}/sysd_cfg_yaml.c
                      ${SRC_DIR}/sysd_fru.c ${SRC_DIR}/sysd_ovsdb_if.c
