new: dev: add event logging for Sysd
Change-Id: I6b1af1804b55073a0f4f6b57e9583074953d4e90
Signed-off-by: Ganesh Narayanan <ganesh.rag.narayanan@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ add_executable (${SYSD} ${SOURCES})
 
 target_link_libraries (${SYSD} ${OPSUTILS_LIBRARIES} ${CONFIG_YAML_LIBRARIES}
                        ${OVSCOMMON_LIBRARIES} ${OVSDB_LIBRARIES} ${ZLIB_LIBRARIES}
-                       -lpthread -lrt)
+                       -lpthread -lrt -lsupportability)
 
 # The default install prefix is /usr. We want to install manifest file at
 # '/etc/openswitch'. So change the install prefix to '/', and use relative
