--- a/tests/test_hw_desc_files/manifest.yaml
+++ b/tests/test_hw_desc_files/manifest.yaml
@@ -43,3 +43,5 @@ files:
         filename:   qos.yaml
     -   name:       fru
         filename:   fru.yaml
+    -   name:       acl
+        filename:   acl.yaml
