Add system status LED support.
Provides support for a system status LED.

Set the system LED to 'good' upon successful initialization of ops-sysd.
Set the system LED to 'bad' upon exit from ops-sysd.

Tags: new, dev
TG-782 # Closed
Depends-On: Ie913808900906e9050e4f21c0c668e27e2b57781

Change-Id: I146fdf65c9fae7c03d979609fe8413f12192bd6f
Signed-off-by: Mike Berger <mabnhdev@gmail.com>

--- a/include/sysd_util.h.in
+++ b/include/sysd_util.h.in
@@ -73,5 +73,7 @@ int sysd_create_link_to_hwdesc_files(void);
 
 unsigned int calc_crc(unsigned char *buf, int len);
 
+extern void sysd_cfg_yaml_set_system_status_led(int good);
+
 /** @} end of group ops-sysd */
 #endif /* __SYSD_UTIL_H__ */
