CT's for Timezone support
TG-1598

Change-Id: Iaac4eee0654f121cd0921b61b8c73e43bb1514d4
Signed-off-by: Srinivasan Srivatsan <srinivasan.srivatsan@hpe.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # Ignore the build directory. It created by yocto during compilation.
 build
+ops-tests/component/ops-sysd/__pycache__/
+ops-tests/component/ops-sysd/test_sysd_ct_hw_desc_files/__pycache__/
+ops-tests/component/ops-sysd/test_sysd_ct_image_manifest_file/__pycache__/
+ops-tests/component/ops-sysd/test_sysd_ct_os_release/__pycache__/
